@@ -117,21 +117,6 @@ sub finish {
   return @_ ? $self->write(@_)->write('') : $self->write('');
 }
 
-sub flash {
-  my $self = shift;
-
-  # Check old flash
-  my $session = $self->session;
-  return $session->{flash} ? $session->{flash}{$_[0]} : undef
-    if @_ == 1 && !ref $_[0];
-
-  # Initialize new flash and merge values
-  my $values = ref $_[0] ? $_[0] : {@_};
-  @{$session->{new_flash} ||= {}}{keys %$values} = values %$values;
-
-  return $self;
-}
-
 sub helpers { $_[0]->app->renderer->get_helper('')->($_[0]) }
 
 sub on {
@@ -335,22 +320,6 @@ sub url_for {
   return $url;
 }
 
-sub validation {
-  my $self = shift;
-
-  my $stash = $self->stash;
-  return $stash->{'mojo.validation'} if $stash->{'mojo.validation'};
-
-  my $req    = $self->req;
-  my $token  = $self->session->{csrf_token};
-  my $header = $req->headers->header('X-CSRF-Token');
-  my $hash   = $req->params->to_hash;
-  $hash->{csrf_token} //= $header if $token && $header;
-  $hash->{$_} = $req->every_upload($_) for map { $_->name } @{$req->uploads};
-  my $v = $self->app->validator->validation->input($hash);
-  return $stash->{'mojo.validation'} = $v->csrf_token($token);
-}
-
 sub write {
   my ($self, $chunk, $cb) = @_;
   $self->res->content->write($chunk, $cb ? sub { shift; $self->$cb(@_) } : ());
@@ -515,18 +484,6 @@ sharing the same name as an array reference.
 Close WebSocket connection or long poll stream gracefully. This method will
 automatically respond to WebSocket handshake requests with a C<101> response
 status, to establish the WebSocket connection.
-
-=head2 flash
-
-  my $foo = $c->flash('foo');
-  $c      = $c->flash({foo => 'bar'});
-  $c      = $c->flash(foo => 'bar');
-
-Data storage persistent only for the next request, stored in the L</"session">.
-
-  # Show message after redirect
-  $c->flash(message => 'User created successfully!');
-  $c->redirect_to('show_user', id => 23);
 
 =head2 helpers
 
@@ -939,27 +896,6 @@ to inherit query parameters from the current request.
 
   # "/list?q=mojo&page=2" if current request was for "/list?q=mojo&page=1"
   $c->url_with->query([page => 2]);
-
-=head2 validation
-
-  my $v = $c->validation;
-
-Get L<Mojolicious::Validator::Validation> object for current request to
-validate file uploads as well as C<GET> and C<POST> parameters extracted from
-the query string and C<application/x-www-form-urlencoded> or
-C<multipart/form-data> message body. Parts of the request body need to be loaded
-into memory to parse C<POST> parameters, so you have to make sure it is not
-excessively large. There's a 16MiB limit for requests by default.
-
-  # Validate GET/POST parameter
-  my $v = $c->validation;
-  $v->required('title', 'trim')->size(3, 50);
-  my $title = $v->param('title');
-
-  # Validate file upload
-  my $v = $c->validation;
-  $v->required('tarball')->upload->size(1, 1048576);
-  my $tarball = $v->param('tarball');
 
 =head2 write
 
