@@ -799,19 +799,20 @@ parameter.
     </body>
   </html>
 
-The methods L<Mojolicious::Controller/"flash"> and
+The helper L<Mojolicious::Plugin::DefaultHelpers/"flash"> and method
 L<Mojolicious::Controller/"redirect_to"> are often used together to prevent
 double form submission, allowing users to receive a confirmation message that
 will vanish if they decide to reload the page they've been redirected to.
 
 =head2 Form validation
 
-You can use L<Mojolicious::Controller/"validation"> to validate C<GET> and
-C<POST> parameters submitted to your application. All unknown fields will be
-ignored by default, so you have to decide which should be required or optional
-before you can perform checks on their values. Every check is performed right
-away, so you can use the results immediately to build more advanced validation
-logic with methods like L<Mojolicious::Validator::Validation/"is_valid">.
+You can use L<Mojolicious::Plugin::DefaultHelpers/"validation"> to validate
+C<GET> and C<POST> parameters submitted to your application. All unknown fields
+will be ignored by default, so you have to decide which should be required or
+optional before you can perform checks on their values. Every check is performed
+right away, so you can use the results immediately to build more advanced
+validation logic with methods like
+L<Mojolicious::Validator::Validation/"is_valid">.
 
   use Mojolicious::Lite;
 
